--- a/cocktails/index.html
+++ b/cocktails/index.html
@@ -22,22 +22,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="./images/cocktails/hurricane.png" alt="Hurricane" style="width:100%">
+        <img src="../../images/cocktails/hurricane.png" alt="Hurricane" style="width:100%">
         <h3 style="text-align:left">Hurricane</h3>
         <p><i>Rum, passionfruit, orange, grenadine, lime</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/division_bell.webp" alt="Division Bell" style="width:100%">
+        <img src="../../images/cocktails/division_bell.webp" alt="Division Bell" style="width:100%">
         <h3 style="text-align:left">Division Bell</h3>
         <p><i>mezcal, Aperol, maraschino liqueur, lime</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
+        <img src="../../images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
         <h3 style="text-align:left">Hibiscus Margarita</h3>
         <p><i>Blanco tequila, Sorel, lime, agave syrup</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
+        <img src="../../images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
         <h3 style="text-align:left">Pink Lady</h3>
         <p><i>gin, lime, applejack, lemon, grenadine, egg white*</i></p>
       </div>
@@ -52,12 +52,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <h2>Mocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="mocktails">
       <div class="w3-quarter">
-        <img src="./images/cocktails/dont_call_me_shirley.webp" alt="Hot Buttered Rum" style="width:100%">
+        <img src="../../images/cocktails/dont_call_me_shirley.webp" alt="Hot Buttered Rum" style="width:100%">
         <h3 style="text-align:left">Don't Call Me Shirley</h3>
         <p><i>Lemon juice, lime juice, grenadine, club soda</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/heras_crown.webp" alt="Boozy Hot Chocolate" style="width:100%">
+        <img src="../../images/cocktails/heras_crown.webp" alt="Boozy Hot Chocolate" style="width:100%">
         <h3 style="text-align:left">Hera's Crown</h3>
         <p><i>Grenadine, orange juice, lemon juice, club soda</i></p>
       </div>
