--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/new_me.JPG" style="width:100%;" class="w3-round"><br><br>
+    <img src="./images/me.JPG" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Sean Grate</b></h4>
     <p class="w3-text-grey">Ph.D. Candidate</p>
   </div>
@@ -35,10 +35,12 @@
     <a href="#papers" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text-o w3-margin-right"></i>PAPERS</a>
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-university w3-margin-right"></i>RESEARCH</a>
     <a href="#software" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-terminal w3-margin-right"></i>SOFTWARE</a> 
-    <a href="./talks.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-microphone w3-margin-right"></i>TALKS</a>
-    <a href="./teaching.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-graduation-cap w3-margin-right"></i>TEACHING</a>
-    <a href="./travel.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-plane w3-margin-right"></i>TRAVEL</a>
-    <a href="./projects.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-pencil w3-margin-right"></i>PAST PROJECTS</a>
+    <a href="./talks/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-microphone w3-margin-right"></i>TALKS</a>
+    <a href="./teaching/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-graduation-cap w3-margin-right"></i>TEACHING</a>
+    <a href="./outreach/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-users w3-margin-right"></i>OUTREACH</a>
+    <a href="./service/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-tasks w3-margin-right"></i>SERVICE</a>
+    <a href="./travel/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-plane w3-margin-right"></i>TRAVEL</a>
+    <a href="./past-projects/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-pencil w3-margin-right"></i>PAST PROJECTS</a>
   </div>
   <div class="w3-panel w3-large">
     <a class="weblink" href="https://github.com/TheGrateSalmon" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
@@ -54,7 +56,7 @@
 
   <!-- Header -->
   <header>
-    <a href="#"><img src="./images/new_me.JPG" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+    <a href="#"><img src="./images/me.JPG" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
   </header>
 
@@ -205,7 +207,7 @@
           <br>
           <br>
         </li>       
-      </ol>
+    </ol>
     </div>
     <hr>
   </div>
@@ -243,7 +245,7 @@
     <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>MatrixSchubert</b></p>
+        <p style="font-family: Lucida Console, monospace;"><b>MatrixSchubert</b></p>
         <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
       </div>
     </div>
@@ -257,7 +259,7 @@
     <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="https://github.com/TheGrateSalmon/M2/tree/permutations" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Permutations</b></p>
+        <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
         <p>A Macaulay2 package implementing support for permutations (in progress).</p>
       </div>
     </div>
