--- a/past-projects/assignments/index.html
+++ b/past-projects/assignments/index.html
@@ -9,10 +9,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-    body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-    a.weblink:hover {opacity:0.6}
-  </style>
+  <link rel="stylesheet" href="../../styles/misc.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>  
 </head>
@@ -25,12 +22,12 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/assignments/assignments.PNG" style="width:100%;" class="w3-round"><br><br>
+    <img src="../../images/assignments/assignments.PNG" style="width:100%;" class="w3-round"><br><br>
     <h4><b>TA Assignments</b></h4>
     <p class="w3-text-grey">Assign TAs to teaching assignments with constraints and preferences.</p>
   </div>
   <div class="w3-bar-block">
-    <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
+    <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO BACK</a> 
     <a href="#background" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-book w3-margin-right"></i>BACKGROUND</a> 
     <a href="#algorithm" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-terminal w3-margin-right"></i>ALGORITHM</a> 
   </div>
@@ -72,7 +69,7 @@
   <div id="algorithm" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Algorithm</b></h4>
     <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:right">
-      <img src="./images/assignments/assignments.PNG" alt="graph" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
+      <img src="../../images/assignments/assignments.PNG" alt="graph" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
       <br><div style="text-align:center"><i>Graph formulation of the Math Lab assignment problem.</i></div>
     </div>
     <p>We can formulate this problem in terms of finding an optimal subgraph of a
@@ -105,7 +102,7 @@
     this subgraph.</p>
     <div class="w3-container">
       <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:left">
-        <img src="./images/assignments/code.PNG" alt="code" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:left">
+        <img src="../../images/assignments/code.PNG" alt="code" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:left">
         <br><div style="text-align:center"><i>The algorithm implemented in Python.</i></div>
       </div>
 
@@ -127,15 +124,15 @@
     </div>
     <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/assignments/step1.PNG" alt="step1" style="max-width:512px; max-height:512px">
+        <img src="../../images/assignments/step1.PNG" alt="step1" style="max-width:512px; max-height:512px">
         <br><div style="text-align:center"><i>Determine compatible student times and group times.</i></div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/assignments/step2.PNG" alt="step2" style="max-width:512px; max-height:512px">
+        <img src="../../images/assignments/step2.PNG" alt="step2" style="max-width:512px; max-height:512px">
         <br><div style="text-align:center"><i>Select a time for each group.</i></div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/assignments/step3.PNG" alt="step3" style="max-width:512px; max-height:512px">
+        <img src="../../images/assignments/step3.PNG" alt="step3" style="max-width:512px; max-height:512px">
         <br><div style="text-align:center"><i>Select a subset of students for each group time.</i></div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -184,7 +181,7 @@
       document.getElementById("myOverlay").style.display = "none";
   }
 </script>
-<script src="./scripts/slideshows.js"></script>
+<script src="../../scripts/slideshows.js"></script>
 
 </body>
 
