--- a/past-projects/heisenberg/index.html
+++ b/past-projects/heisenberg/index.html
@@ -22,12 +22,12 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/heisenberg/tetra_growth.gif" style="width:100%;" class="w3-round"><br><br>
+    <img src="../../images/heisenberg/tetra_growth.gif" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Discrete Heisenberg Group</b></h4>
     <p class="w3-text-grey">Asymptotics of the (discrete) Heisenberg group.</p>
   </div>
   <div class="w3-bar-block">
-    <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
+    <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO BACK</a> 
     <a href="#background" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-book w3-margin-right"></i>BACKGROUND</a> 
     <a href="#setup" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-wrench w3-margin-right"></i>SETUP</a> 
     <a href="#results" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pencil fa-fw w3-margin-right"></i>RESULTS</a>
@@ -48,7 +48,7 @@
   <div id="background" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Background</b></h4>
     <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:right">
-      <img src="./images/heisenberg/comm_growth.gif" alt="comm_growth" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
+      <img src="../../images/heisenberg/comm_growth.gif" alt="comm_growth" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
       <br><div style="text-align:center">Progressive dilations of \( P_n(S) \) in \( (\mathbb{Z}^3,+) \)</div>
     </div>
     <p>
@@ -162,27 +162,27 @@
     </p>
     <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra_growth.gif" alt="tetra_growth" style="max-width:512px; max-height:512px">
+        <img src="../../images/heisenberg/tetra_growth.gif" alt="tetra_growth" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Progressive dilations of \( P_n(S) \) in \( (\mathbb{Z}^3, \star) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra2.gif" alt="tetra2" style="max-width:512px; max-height:512px">
+        <img src="../../images/heisenberg/tetra2.gif" alt="tetra2" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_2(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra4.gif" alt="tetra4" style="max-width:512px; max-height:512px">
+        <img src="../../images/heisenberg/tetra4.gif" alt="tetra4" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_4(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra6.gif" alt="tetra6" style="max-width:512px; max-height:512px">
+        <img src="../../images/heisenberg/tetra6.gif" alt="tetra6" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_6(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra8.gif" alt="tetra8" style="max-width:512px; max-height:512px">
+        <img src="../../images/heisenberg/tetra8.gif" alt="tetra8" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_8(S) \)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/heisenberg/tetra10.gif" alt="tetra10" style="max-width:512px; max-height:512px">
+        <img src="../../images/heisenberg/tetra10.gif" alt="tetra10" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">\( P_{10}(S) \)</div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -254,7 +254,7 @@
       document.getElementById("myOverlay").style.display = "none";
   }
 </script>
-<script src="./scripts/slideshows.js"></script>
+<script src="../../scripts/slideshows.js"></script>
 
 </body>
 
