--- a/teaching/index.html
+++ b/teaching/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <!-- Here is the source for the template: https://www.w3schools.com/w3css/tryw3css_templates_portfolio.htm -->
-  <title>Sean Grate</title>
+  <title>Teaching</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./styles/misc.css">
+  <link rel="stylesheet" href="../styles/misc.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
@@ -22,12 +22,12 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <!-- <img src="./images/lefschetz/hypersurface.png" style="width:100%;" class="w3-round"><br><br> -->
+    <!-- <img src="../images/lefschetz/hypersurface.png" style="width:100%;" class="w3-round"><br><br> -->
     <h4><b>Teaching</b></h4>
     <p class="w3-text-grey">Courses I have taught.</p>
   </div>
   <div class="w3-bar-block">
-    <a href="./" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
+    <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
     <a href="#courses" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-book w3-margin-right"></i>COURSES</a> 
     <a href="#testimonials" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-comments w3-margin-right"></i>TESTIMONIALS</a> 
   </div>
