--- a/past-projects/minecraft/index.html
+++ b/past-projects/minecraft/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./styles/misc.css">
+  <link rel="stylesheet" href="../../styles/misc.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>  
 </head>
@@ -22,12 +22,12 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/minecraft/world by height.png" style="width:100%;" class="w3-round"><br><br>
+    <img src="../../images/minecraft/world by height.png" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Generating Minecraft Worlds</b></h4>
     <p class="w3-text-grey">Generate worlds in Minecraft with deep learning and real world data.</p>
   </div>
   <div class="w3-bar-block">
-    <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
+    <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO BACK</a> 
     <a href="#background" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-book w3-margin-right"></i>BACKGROUND</a> 
     <a href="#approaches" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-map w3-margin-right"></i>APPROACHES</a> 
   </div>
@@ -60,31 +60,31 @@
     <!-- slideshow -->
     <div class="w3-content w3-display-container" style="max-width:75%; max-height:75%">
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/world by height.png" alt="world by height" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/world by height.png" alt="world by height" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A region of a world (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/world by block.png" alt="world by block" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/world by block.png" alt="world by block" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A region of a world (colored by block ID)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/village.png" alt="village" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/village.png" alt="village" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">A village (colored by block ID)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/mountain overlook.png" alt="mountain overlook" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/mountain overlook.png" alt="mountain overlook" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">View from a mountain (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/caves.png" alt="caves" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/caves.png" alt="caves" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Underground cave systems (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/cave closeup.png" alt="cave closeup" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/cave closeup.png" alt="cave closeup" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Closeup of a cave (colored by height)</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:100%; max-height:100%">
-        <img src="./images/minecraft/cave ravine.png" alt="cave ravine" style="max-width:100%; max-height:100%">
+        <img src="../../images/minecraft/cave ravine.png" alt="cave ravine" style="max-width:100%; max-height:100%">
         <div class="w3-display-bottommiddle w3-medium w3-container w3-black" style="text-align:center">Closeup of ravine (colored by height)</div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -152,7 +152,7 @@
       document.getElementById("myOverlay").style.display = "none";
   }
 </script>
-<script src="./scripts/slideshows.js"></script>
+<script src="../../scripts/slideshows.js"></script>
 
 </body>
 
