--- a/past-projects/resampling/index.html
+++ b/past-projects/resampling/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./styles/misc.css">
+  <link rel="stylesheet" href="../../styles/misc.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>  
 </head>
@@ -22,12 +22,12 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="./images/resampling/plane.gif" style="width:100%;" class="w3-round"><br><br>
+    <img src="../../images/resampling/plane.gif" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Resampling Point Clouds</b></h4>
     <p class="w3-text-grey">Getting finer resolutions of point cloud data.</p>
   </div>
   <div class="w3-bar-block">
-    <a href="./index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
+    <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
     <a href="#background" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-book w3-margin-right"></i>BACKGROUND</a> 
     <a href="#approaches" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-map w3-margin-right"></i>APPROACHES</a> 
   </div>
@@ -49,15 +49,15 @@
     <h4><b>Background</b></h4>
     <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/resampling/plane.gif" alt="plane" style="max-width:512px; max-height:512px">
+        <img src="../../images/resampling/plane.gif" alt="plane" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container" style="text-align:center">A plane from <a class="weblink" href="https://modelnet.cs.princeton.edu/">ModelNet</a>.</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/resampling/person.gif" alt="person" style="max-width:512px; max-height:512px">
+        <img src="../../images/resampling/person.gif" alt="person" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container" style="text-align:center">A person from <a class="weblink" href="https://modelnet.cs.princeton.edu/">ModelNet</a>.</div>
       </div>
       <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-        <img src="./images/resampling/plant.gif" alt="plant" style="max-width:512px; max-height:512px">
+        <img src="../../images/resampling/plant.gif" alt="plant" style="max-width:512px; max-height:512px">
         <div class="w3-display-bottommiddle w3-medium w3-container" style="text-align:center">A plant from <a class="weblink" href="https://modelnet.cs.princeton.edu/">ModelNet</a>.</div>
       </div>
       <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -142,7 +142,7 @@
       document.getElementById("myOverlay").style.display = "none";
   }
 </script>
-<script src="./scripts/slideshows.js"></script>
+<script src="../../scripts/slideshows.js"></script>
 
 </body>
 
